# MARC-Rover

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Debug/: CMakeLists.txt
Debug/include/: debug.h
List/: CMakeLists.txt
List/include/: list.h
List/include/list/: array.h  linked.h
List/src/array/: add.c  clear.c  get.c  init.c  insert.c  memory.c  remove.c  remove_index.c
List/src/linked/: add.c  clear.c  get.c  init.c  insert.c  memory.c  remove.c  remove_index.c
List/tests/: CMakeLists.txt
List/tests/include/tests/: list.h
List/tests/include/tests/libc/: malloc.h  realloc.h
List/tests/src/: array.c  list_default.c
List/tests/src/array/: add_get.c  clear.c  init.c  insert.c  remove.c  remove_index.c
List/tests/src/linked/: add_get.c  clear.c  init.c  insert.c  remove.c  remove_index.c
List/tests/src/tests/libc/: malloc.c  realloc.c
RoverRun/: CMakeLists.txt
RoverRun/include/: marc.h  simulation.h  tree.h
RoverRun/src/: main.c  simulation.c  tree.c
cmake/Modules/: FindCriterion.cmake
